pycpptraj/log
/home/haichit/anaconda/lib/python2.7/distutils/dist.py:267: UserWarning: Unknown distribution option: 'platform'
  warnings.warn(msg)
running install
running build
running build_py
copying pycpptraj/DataSet_Coords_CRD.pxd -> build/lib.linux-x86_64-2.7/pycpptraj
running build_ext
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/DataFile.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/_FunctPtr.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/ArgList.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Atom.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/AtomMask.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Box.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/BufferedLine.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/CpptrajFile.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/cpptraj.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/CpptrajState.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Dimension.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Matrix_3x3.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/MaskToken.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Molecule.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/NameType.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Parm_Amber.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/ParmIO.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/ParameterTypes.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/ParmFile.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Residue.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Topology.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/TopologyList.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Trajin.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/TrajinList.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Trajin_Single.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Vec3.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/FileName.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Frame.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/Array1D.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/FrameArray.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/BaseIOtype.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/TrajectoryIO.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/FrameList.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/DataSet.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/DataSet_1D.cpp' Cython extension (up-to-date)
skipping '/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/DataSet_Coords.cpp' Cython extension (up-to-date)
cythoning /cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/DataSet_Coords_CRD.pyx to /cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/DataSet_Coords_CRD.cpp

Error compiling Cython file:
------------------------------------------------------------
...
        inline void GetFrame(int idx, _Frame & fIn, const _AtomMask& mIn)
        inline void SetCRD(int idx, const _Frame& fIn)


cdef class DataSet_Coords_CRD (DataSet_Coords)
    cdef _DataSet_Coords_CRD* thisptr
^
------------------------------------------------------------

pycpptraj/DataSet_Coords_CRD.pxd:25:0: Possible inconsistent indentation

Error compiling Cython file:
------------------------------------------------------------
...
        inline void GetFrame(int idx, _Frame & fIn, const _AtomMask& mIn)
        inline void SetCRD(int idx, const _Frame& fIn)


cdef class DataSet_Coords_CRD (DataSet_Coords)
    cdef _DataSet_Coords_CRD* thisptr
^
------------------------------------------------------------

pycpptraj/DataSet_Coords_CRD.pxd:25:0: Expected an identifier or literal

Error compiling Cython file:
------------------------------------------------------------
...
# distutils: language = c++


cdef class DataSet_Coords_CRD (DataSet_Coords):
    ^
------------------------------------------------------------

pycpptraj/DataSet_Coords_CRD.pyx:4:5: 'DataSet_Coords' is not declared

Error compiling Cython file:
------------------------------------------------------------
...
# distutils: language = c++


cdef class DataSet_Coords_CRD (DataSet_Coords):
    def __cinit__(self):
        self.thisptr = new _DataSet_Coords_CRD()
                          ^
------------------------------------------------------------

pycpptraj/DataSet_Coords_CRD.pyx:6:27: '_DataSet_Coords_CRD' is not a type identifier

Error compiling Cython file:
------------------------------------------------------------
...
# distutils: language = c++


cdef class DataSet_Coords_CRD (DataSet_Coords):
    def __cinit__(self):
        self.thisptr = new _DataSet_Coords_CRD()
                          ^
------------------------------------------------------------

pycpptraj/DataSet_Coords_CRD.pyx:6:27: new operator can only be applied to a C++ class

Error compiling Cython file:
------------------------------------------------------------
...


cdef class DataSet_Coords_CRD (DataSet_Coords):
    def __cinit__(self):
        self.thisptr = new _DataSet_Coords_CRD()
        self.baseptr2 = <_DataSet_Coords*> self.thisptr
                        ^
------------------------------------------------------------

pycpptraj/DataSet_Coords_CRD.pyx:7:25: '_DataSet_Coords' is not a type identifier

Error compiling Cython file:
------------------------------------------------------------
...

cdef class DataSet_Coords_CRD (DataSet_Coords):
    def __cinit__(self):
        self.thisptr = new _DataSet_Coords_CRD()
        self.baseptr2 = <_DataSet_Coords*> self.thisptr
        self.baseptr = <_DataSet_1D*> self.thisptr
                       ^
------------------------------------------------------------

pycpptraj/DataSet_Coords_CRD.pyx:8:24: '_DataSet_1D' is not a type identifier
building 'pycpptraj.DataSet_Coords_CRD' extension
gcc -pthread -fno-strict-aliasing -g -O2 -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -fPIC -I/cavern/haichit/Programs/Cpptraj_git/cpptraj/src -I/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/ -I/home/haichit/anaconda/include/python2.7 -c /cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/DataSet_Coords_CRD.cpp -o build/temp.linux-x86_64-2.7/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/DataSet_Coords_CRD.o
cc1plus: warning: command line option "-Wstrict-prototypes" is valid for Ada/C/ObjC but not for C++
/cavern/haichit/Programs/pycpptraj_git/pycpptraj/pycpptraj/DataSet_Coords_CRD.cpp:1:2: error: #error Do not use this file, it is the result of a failed Cython compilation.
error: command 'gcc' failed with exit status 1
